# client

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL_JACK.md  Packaging_DMGSetup.scpt  README.md  prepare-macos.sh
.github/workflows/: build.yml  nightly.yml  ubuntu.yml
assets/: utils.h
assets/digitalstage/: DMGBackground.tif  appicon.icns
cmake/: BuildLibOv.cmake  FixAppleArchitecture.cmake  FixLinuxCpprest.cmake
cmake/modules/: FindSoundIo.cmake
src/: ApplicationController.cpp  ApplicationController.h  ApplicationState.h  ApplicationStore.h  JammerHandler.cpp  LoginPane.cpp  LoginPane.h  LoginWindow.cpp  LoginWindow.h  Main.cpp  OrlandoViolsClient.h  OvController.cpp  OvController.h  OvHandler.cpp  OvHandler.h  SettingsWindow.h  TaskbarComponent.cpp  TaskbarComponent.h  cli.cpp  main.cpp  ov_client_digitalstage_t.cpp  ov_client_digitalstage_t.h  ov_ds_sockethandler_t.cpp  ov_ds_sockethandler_t.h
src/common/: JackAudioController.cpp  JackAudioController.h  MacAddress.cpp  MacAddress.h  OvMixer.cpp  OvMixer.h
src/digitalstage/: ApplicationController.cpp  ApplicationController.h  ApplicationStore.h  LoginPane.cpp  LoginPane.h  Main.cpp  SettingsWindow.h  TaskbarComponent.cpp  TaskbarComponent.h
src/digitalstage/jammer/: JammerHandler.cpp  JammerHandler.h
src/digitalstage/ov/: OvController.cpp  OvController.h  OvHandler.cpp  OvHandler.h  ov_client.cpp  ov_client.h  ov_client_digitalstage_t.h  ov_controller_digitalstage_t.cpp  ov_controller_digitalstage_t.h
src/digitalstage/ov/old/: OvHandler.cpp  OvHandler.h
src/digitalstage/utils/: SoundCardManager.cpp  SoundCardManager.h
src/handler/: JammerHandler.cpp  JammerHandler.h  OvHandler.cpp  OvHandler.h
src/orlandoviols/: ApplicationController.cpp  ApplicationController.h  Main.cpp  OrlandoViolsClient.h  TaskbarComponent.cpp  TaskbarComponent.h
src/ov/: JackAudioController.h  OrlandoViolsClient.h  OvHandler.cpp  OvHandler.h  OvMixer.cpp  OvMixer.h
src/utils/: SoundCardManager.cpp  SoundCardManager.h
